app/assets/stylesheets/media.scss
@import "bootstrap/functions";
@import "bootstrap/variables";
@import "bootstrap/mixins";

.media-grid {
  @include make-col-ready();

  @include media-breakpoint-up(sm) {
    @include make-col(12);
  }

  @include media-breakpoint-up(md) {
    @include make-col(6);
  }

  @media (min-width: 1100px) {
    @include make-col(4);
  }

  @media (min-width: 1300px) {
    @include make-col(3);
  }

  @media (min-width: 1700px) {
    @include make-col(2.4); // 5 columns
  }
}

.hidden {
  display: none;
}

#mediaTable {
  overflow-y: scroll;
  max-height: 80vh;
}

#edit_tag_form {
  display: none;
}

#medium-basics-warning {
  color: red;
  display: none;
}

#protected-destinations {
  font-weight: bold;
}

#media-box-footer {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  padding: 0.5rem var(--bs-card-cap-padding-x);
}

.media-card-header {
  display: flex;
  justify-content: flex-end;
}

.mampf-card-header {
  padding: 0.75rem 1.25rem;
  background-color: #223e62;
}

.mampf-header-end {
  color: $gray-300;

  & a {
    color: $gray-300;
  }
}

.card-footer {
  padding: 0;
  background-color: #21252908;
}

.media-hr {
  margin: 0;
}

.card-text-end {
  padding: 0.75rem var(--bs-card-cap-padding-x);
}

.media-download-buttons {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0.25rem;
  justify-content: space-around;
}

.download-button {
  padding: 0 0.5em;
  font-size: 0.75em;
  width: 3.8em;
  height: 1.4em;
  border: none;
}

.mampf-card {
  border: 2px solid #223e62;
  position: relative;
  overflow: hidden;
  background: linear-gradient(0deg, #ecf1f8 0%, #fcfdfd 60%);
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 3px;
  transition: box-shadow 120ms ease-in-out;

  &:hover {
    box-shadow: rgba(50, 50, 93, 0.02) 0px 50px 50px -20px,
      rgba(0, 0, 0, 0.15) 0px 25px 50px -25px;
  }
}

.mampf-card:hover::after {
  opacity: 0.12;
}

.mampf-card::after {
  content: '';
  position: absolute;
  width: 160px;
  height: 160px;
  top: calc(var(--y, 0) * 1px - 80px);
  left: calc(var(--x, 0) * 1px - 80px);
  opacity: 0;
  background: radial-gradient(white, #00000000 80%);
  transition: opacity 200ms;
  pointer-events: none;
}

.mampf-card-image-wrapper {
  overflow: hidden;
  display: flex;
  justify-content: center;
  position: relative;

  &:hover .interactive-hover {
    visibility: visible;
    opacity: 1;
  }
}

.mampf-card-image {
  margin: -5px; // crop image to not display scroll bars present in some images
  width: 100%;
}

.interactive-hover {
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.75);
  visibility: hidden;
  opacity: 0;
  transition: visibility 150ms ease-in-out, opacity 150ms ease-in-out;
}

.interactive-hover-icon {
  font-size: 2.3em;
  color: white;
}

.empty-default-screenshot {
  width: 100%;
  height: 8em;
  background: linear-gradient(135deg, #223e6255 25%, transparent 25%) -10px 0/ 20px 20px, linear-gradient(225deg, #223e62 25%, transparent 25%) -10px 0/ 20px 20px, linear-gradient(315deg, #223e6255 25%, transparent 25%) 0px 0/ 20px 20px, linear-gradient(45deg, #223e62 25%, #ffffff 25%) 0px 0/ 20px 20px;
}

.card-body {
  // same as card-footer border
  border-top: var(--bs-card-border-width) solid var(--bs-card-border-color);
}

#media-card-subheader {
  display: flex;
  justify-content: space-between;
  word-break: auto-phrase;
}

#video-wait {
  display: none;
}

#video-preview {
  position: relative;
  width: 75%;
}

#destinationsCardBody {
  max-height: 50vh;
  overflow-y: scroll;
}

#manuscript-informer, #video-informer, #geogebra-informer, #userManuscript-informer {
  height: 1em;
}

#manuscript-preview {
  background: white;
}

.manuscript-thumbnail {
  object-fit: cover;
  max-height: 200px;
  object-position: 0px 0px;
  background: white;
}

.video-thumbnail {
  object-fit: contain;
  max-height: 200px;
  object-position: 0px 0px;
  background: white;
}

#video-edit {
  border: 1px solid gray;
  position: relative;
  max-width: 100%;
  max-height: calc(100% - 60px);
}

#thyme-edit {
  height:100%;
  width: 100%;
  display: grid;
  grid-template-rows: 60% 40%;
  grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
}

#video-area-edit {
  border: 1px solid #f2f2f2;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  grid-column: 1 / 5;
  grid-row: 1 / 2;
}

.action-box {
  padding: 10px;
}

#action-edit {
  border: 1px solid #f2f2f2;
  grid-column: 5 / 9;
  grid-row: 1 / 2;
  overflow-y: scroll;
}

#screenshot-edit {
  border: 1px solid #f2f2f2;
  grid-column: 7 / 9;
  grid-row: 2 / 3;
}

.screenshot-box {
  max-width: 90%;
  max-height: 60%;
  border: 1px solid lightgray;
  margin-left: auto;
  margin-right: auto
}

#toc-edit {
  border: 1px solid #f2f2f2;
  grid-column: 1 / 4;
  grid-row: 2 / 3;
}

#meta-edit {
  border: 1px solid #f2f2f2;
  grid-column: 4 / 7;
  grid-row: 2 / 3;
}

#video-controlBar-edit {
	width: 100%;
	position: relative;
	bottom: 0px;
	left: 0px;
	padding: 5px;
	height: auto;
	background: lightgray;
	-webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

#video-controls-edit {
	position: relative;
	display: inline-block;
	height: 30px;
	width: 100%;
}

#volume-controls-edit {
	position: absolute;
	display: flex;
	width: 10%;
	right: 0%;
}

#add-buttons {
	position: absolute;
	display: flex;
	left: 75%;
}

.card-full {
  width: 100%;
  height: 100%;
}

.meta {
  background: #e6e6e6;
}

.detach {
  position: absolute;
  top: 0;
  right:0;
  padding: 3px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

#detach-manuscript, #detach-video, #detach-geogebra {
  font-size: 1em;
}

#thyme-edit ol {
  position: relative;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow-y: scroll;
}

#thyme-edit li a {
  display: block;
  color: black;
  padding: .7rem 1rem;
  transition: .3s;
  border-bottom: 1px solid lightgrey;
}

#thyme-edit .current {
  background: lightcyan;
  color: #000;
}

#thyme-edit li a:not(.current):hover,
#thyme-edit li a:not(.current):focus {
  background: #f0f0f0;
  color: #000;
  cursor: pointer;
}

#thyme-edit li a.current:hover,
#thyme-edit li a.current:focus {
  background: #b3ffff;
  color: #000;
  cursor: pointer;
}

#toc-area {
  position: relative;
  height: calc(100% - 4em);
}

#toc-list {
  position: relative;
  max-height: 100%;
}

#meta-area {
  position: relative;
  height: calc(100% - 4em);
}

#meta-list {
  position: relative;
  max-height: 100%;
}

.thyme-header {
  border-radius: 5px;
  border: 1px solid lightgrey;
  max-width: 100%;
  margin: 0px;
  padding: 8px 4px;
  display: flex;
  justify-content: space-between;
}

#delete-item {
  position: absolute;
  right: 20px;
}

.no-deco {
  text-decoration: none !important;
}

#link_reappearance_title, #link_reappearance_link {
  color: gold;
}


#create-item-button:focus, #create-item-button:active:focus, #create-item-button.active:focus{
    outline:none;
    box-shadow:none;
}

#export-screenshot:focus, #export-screenshot:active:focus, #export-screenshot.active:focus{
    outline:none;
    box-shadow:none;
}

#export-toc:focus, #export-toc:active:focus, #export-toc.active:focus{
    outline:none;
    box-shadow:none;
}

#questionStatistics
{
  height: 40vh;
}

#questionStatisticsBox
{
  overflow-y: scroll;
  transform: scaleX(-1); // that is done in order to have the scrollbar on the left side
  height: 40vh;
}
#questionStatisticsArea
{
  transform: scaleX(-1); // revert the mirroring from parent element
}

.details-warning {
  display: none;
}

#remove-screenshot, #export-screenshot, #export-toc, #export-references,
#import-script-items {
  text-decoration: none;
}

.break-text-any-where {
  word-break: break-all;
}

